added basic contact table
