# aa_contacts/api/corporation/contacts.py
@@ -1,0 +1,32 @@
+from django.contrib.auth.models import User
+
+from ninja import Router, Path
+
+from allianceauth.authentication.models import CharacterOwnership
+
+from aa_contacts.models import CorporationToken, CorporationContact
+from ..schema import ContactSchema
+
+router = Router()
+
+
+@router.get("/", response={200: list[ContactSchema], 403: None, 404: None})
+def list_contacts(request, corporation_id: int = Path(...)):
+    user: User = request.user
+
+    ownerships = CharacterOwnership.objects.filter(user=user)
+    if not user.is_superuser and not ownerships.filter(character__corporation_id=corporation_id).exists():
+        return 403, None
+
+    token = CorporationToken.visible_for(user).filter(corporation__corporation_id=corporation_id)
+    if not token.exists():
+        return 404, None
+
+    contacts = (
+        CorporationContact.objects
+        .with_contact_name()
+        .filter(corporation__corporation_id=corporation_id)
+        .prefetch_related('labels')
+    )
+
+    return 200, contacts
